tests/baselines/reference/accessorWithoutBody2(target=es5).errors.txt
error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
accessorWithoutBody2.ts(1,20): error TS1005: '{' expected.


!!! error TS5107: Option 'target=ES5' is deprecated and will stop functioning in TypeScript 7.0. Specify compilerOption '"ignoreDeprecations": "6.0"' to silence this error.
==== accessorWithoutBody2.ts (1 errors) ====
    var v = { set foo(a) }
                       ~
!!! error TS1005: '{' expected.